# shortforge

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/presets/: instagram_reels.json  tiktok.json  youtube_shorts.json
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/beat_sync/: analyzer.rs  detector.rs  mod.rs
src-tauri/src/commands/: beat_sync.rs  export.rs  font.rs  mod.rs  preview.rs  project.rs  telop.rs
src-tauri/src/export_engine/: mod.rs  preset.rs  renderer.rs  validator.rs
src-tauri/src/models/: mod.rs  project.rs  telop.rs  timeline.rs
src-tauri/src/telop_engine/: animation.rs  mod.rs  parser.rs  renderer.rs  template.rs
src-tauri/src/video_core/: cache.rs  decoder.rs  encoder.rs  frame.rs  mod.rs
src/__tests__/: App.test.tsx
src/components/Common/: Button.tsx  Toast.tsx
src/components/Export/: ExportDialog.tsx  PlatformPreset.tsx
src/hooks/: useKeyboardShortcuts.ts  useTimeline.ts
src/i18n/: index.ts
src/lib/: constants.ts  tauri.ts  time.ts
src/stores/: mediaStore.ts  projectStore.ts  telopStore.ts  timelineStore.ts  uiStore.ts
src/test/: setup.ts
src/types/: project.ts  telop.ts  timeline.ts
templates/: bounce.json  burst.json  fade.json  pop.json  typewriter.json
(+25 files in other folders)
