[package]
name = "shortforge"
version = "0.1.0"
description = "Short video editor optimized for TikTok, YouTube Shorts, and Instagram Reels"
authors = ["ShortForge Contributors"]
edition = "2021"

[lib]
name = "shortforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ffmpeg-next = "8"
skia-safe = "0.82"
chrono = { version = "0.4", features = ["serde"] }
